<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">YouCast</string>
    <string name="empty_string"></string>
    <!-- Main Activity -->
    <string name="action_settings">Settings</string>
    <string name="action_signout">Sign Out</string>
    <string name="toast_registration_success">Device registered successfully</string>
    <string name="toast_registration_failed">Device registration failed</string>
    
    <!-- Video List -->
    <string name="text_video_added_date">Added on</string>
    
    <!-- Help Labels -->
    <string name="text_no_video_downloaded">- No videos -</string>
    <string name="text_or">or</string>
    <string name="text_share_youtube_video">Download videos from the YouTube app</string>
    <string name="text_download_youtube_video">Download videos from YouCast</string>
    
    <!-- Download Activity -->
    <string name="title_activity_download">Download Video</string>
    <string name="btn_start_download">Download and return to YouTube</string>
    <string name="text_download_label">You are about to download:</string>
	<string name="toast_download_started">Download has started</string>
    
    <!-- Settings Activity -->
    <string name="title_activity_settings">Settings</string>
    <string name="desc_pref_sync">Check videos to download every 5 minutes</string>
    <string name="desc_pref_hd_enabled">Download videos in HD if available</string>
    <string name="desc_pref_max_retries">Maximum number of times a download will restart if it fails</string>
    <string name="desc_pref_auto_dl">Automatically start downloading videos shared from Youtube app</string>
    
    <!-- Launch Activity -->
    <string name="text_signin">Please sign in to get your videos</string>
    <string name="hint_email">you@email.com</string>
    <string name="hint_password">password</string>
    <string name="btn_signin">GO</string>
    <string name="toast_signin_success">Successfully connected to YouCast</string>
    <string name="toast_signin_failed">Incorrect email and password</string>

    <!-- Notifications  -->
    <string name="notif_downloading">Downloading video</string>
    <string name="notif_preparing_download">Preparing download &#8230;</string>
    <string name="notif_download_started">Downloading</string>
    <string name="notif_download_success">Download successful</string>
    <string name="notif_download_failed">Download failed</string>
    <string name="notif_download_failed_text">Could not download</string>
    
    <!-- Other -->
    <string name="hello_world">Hello world!</string>

</resources>
