<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/download_video_title"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/empty_string"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <ImageView
        android:id="@+id/download_thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/app_name"
        android:layout_below="@+id/download_video_title"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_big_arrow_down" />

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/download_button"
        style="@style/LargeAllCapsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/download_thumbnail"
        android:text="@string/btn_start_download" />

</RelativeLayout>
